<resources>
    <string name="app_name">Talent Hive</string>
    <string name="facebook_app_id">1227061054086278</string>
    <string name="fb_login_protocol_scheme">fb1227061054086278</string>
    <string name="msg_exception">Something wrong!!!.Please try after sometime.</string>
    <string name="lbl_alert_ok">OK</string>
    <string name="lbl_alert_done">DONE</string>
    <string name="lbl_alert_cancel">Cancel</string>
    <string name="lbl_alert_not_now">Not now</string>
    <string name="lbl_alert_continue">Continue</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="msg_deleted">deleted</string>
    <string name="lbl_saving">Saving...</string>
    <string name="lbl_save">Save</string>
    <string name="msg_saved">Saved</string>
    <string name="lbl_logout">Log Out</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_or">OR</string>
    <string name="bottom_sheet_behavior" translatable="false">android.support.design.widget.BottomSheetBehavior</string>
    <string name="menu_discover_people">Discover People</string>
    <string name="title_story_writing">Story Writing</string>
    <string name="title_edit_story">Edit Story</string>
    <string name="title_edit_chapter">Edit Chapter</string>
    <string name="hint_story_title">Title</string>
    <string name="hint_story_description">Story Description</string>
    <string name="hint_chapter_title">Chapter Title</string>
    <string name="hint_start_write">Tap Here To Write Story Chapter</string>
    <string-array name="lbl_story_tab_title">
        <item>Story Feed</item>
        <item>My Stories</item>
    </string-array>
    <string name="desc_undo">Undo</string>
    <string name="desc_redo">Redo</string>
    <string name="lbl_add_chapter">Add Chapter</string>
    <string name="lbl_publish">Publish</string>
    <string name="header_save_changes">Save Changes</string>
    <string name="msg_save_chapter">You have unsaved changes. Do you want to save it?</string>
    <string name="lbl_untitled_story_chapter">Untitled Story Chapter</string>
    <string name="lbl_no_description">No description</string>
    <string name="msg_title_empty">Title should not be empty</string>
    <string name="msg_desc_empty">Description should not be empty</string>
    <string name="msg_select_category">Selsct Category</string>
    <string name="msg_select_lang">Selsct language</string>
    <string name="desc_cover_image">Story Cover Image</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_profile">Profile</string>
    <string name="lbl_photo">Photography</string>
    <string name="lbl_dance">Dance</string>
    <string-array name="lbl_feed_tab_title">
        
        <item>Photography</item>
        
    </string-array>
    <string name="msg_string_progressdialog_loading">Loading</string>
    <string name="msg_string_signing_in_server">Signing in</string>
    <string name="msg_string_registering_in_server">Registering</string>
    <string name="msg_string_request_otp">Sending OTP Request</string>
    <string name="msg_string_registering_email">Registering Email Id</string>
    <string name="msg_string_ok">Ok</string>
    <string name="msg_string_dismiss">Dismiss</string>
    <string name="msg_string_cancel">Cancel</string>
    <string name="msg_error_email">Invalid Email</string>
    <string name="msg_error_mobileNumber">Invalid Mobile Number</string>
    <string name="msg_error_required">Required</string>
    <string name="msg_error_age">Should be 18 Years</string>
    <string name="msg_error_should_match">Confirm password should match</string>
    <string name="lbl_string_yes">YES</string>
    <string name="lbl_string_no">NO</string>
    <string name="lbl_contact_current_location">Current Location</string>
    <string name="msg_hint_username">Username</string>
    <string name="msg_error_username">Enter Email Id</string>
    <string name="msg_error_password">Password Should be minimum 6 Characters.</string>
    <string name="msg_hint_forgotpassword_email">Email id</string>
    <string name="msg_send_opt">Send OTP</string>
    <string name="lbl_string_login">Login</string>
    <string name="progress_dialog_login">Logging In</string>
    <string name="lbl_google_sign_in">Sign in with Google</string>
    <string name="lbl_create_new_account">create new Account</string>
    <string name="com_facebook_loginview_log_in_button_continue">Facebook</string>
    <string name="lbl_signup">Don\'t have an account yet? Sign Up</string>
    <string name="server_client_id">AIzaSyDMyhr5kjFFPpek1ZQ9juY6xFRFC5QorTY</string>
    <string name="oauth2.0_web_client_google_people_api" translatable="false">877402304105-kcm1cpivf4btjkqr790oor34g7s0sbkd.apps.googleusercontent.com</string>
    <string name="google_web_client_secret" translatable="false">de7l2rSXrP2y18knzBsrt-dl</string>
    <string name="redirect_url" translatable="false">urn:ietf:wg:oauth:2.0:oob</string>
    <string name="redirect_url_new" translatable="false">https://www.talenthive.com/oauth2callback</string>
    <string name="lbl_sign_in_terms_conditions">By clicking on Sign In you accept the Terms &amp; Conditions and you have read our Privacy Policy</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="msg_hint_otp">One Time Password<b>*</b></string>
    <string name="msg_hint_password">Password</string>
    <string name="msg_hint_confirm_password">Confirm Password</string>
    <string name="msg_hint_forgotpassword">Forgot Password?</string>
    <string name="msg_change_password">Save Password</string>
    <string name="msg_error_otp">Invalid OTP Entry</string>
    <string name="msg_error_password_empty">Enter Password</string>
    <string name="msg_error_confirm_password_empty">Enter Confirm Password</string>
    <string name="msg_error_enter_mobileno">Enter Mobile No</string>
    <string name="msg_error_paswword_mismatch">Password and Confirm Password Mis-matches</string>
    <string name="msg_string__title_email">Please enter your Email Address.</string>
    <string name="msg_string_title_send_otp">Send OTP</string>
    <string name="msg_hint_mobile_number">Mobile Number</string>
    <string name="msg_like">Like</string>
    <string name="msg_comment">Comment</string>
    <string name="msg_share">Share</string>
    <string name="msg_write_a_caption">Write a caption</string>
    <string name="at">" -at"</string>
    <string name="add_location_msg">Add Location....</string>
    <string name="sivakasi">Sivakasi</string>
    <string name="karthikeyan">Karthikeyan</string>
    <string name="_10">10</string>
    <string name="msg_error">Something wrong</string>
    <string name="msg_post_to">Post To TalentHive</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="hint_name">Name*</string>
    <string name="hint_user_name">UserName*</string>
    <string name="hint_bio">Bio</string>
    <string name="hint_email">Email*</string>
    <string name="hint_password">Password</string>
    <string name="hint_mobile_no">Mobile No</string>
    <string name="sym_dot">.</string>
</resources>