<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinput_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/msg_hint_username"
                android:inputType="text"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinput_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/msg_hint_password"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/useraccountOTPTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/useraccountOTPEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/msg_hint_otp"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textview_terms_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_sign_in_terms_conditions"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_login"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_string_login" />

        <TextView
            android:id="@+id/textview_forget_pswd"
            style="@style/AppTheme.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/msg_hint_forgotpassword"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/divider_dimlight_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:text="@string/lbl_or"
                android:textSize="12sp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/divider_dimlight_gray" />

        </LinearLayout>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/button_fb_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:layout_marginTop="10dp"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/button_google_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/textview_sign_up"
            style="@style/AppTheme.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/lbl_signup"
            android:textSize="14sp" />

    </LinearLayout>
</ScrollView>