<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/imageview_story_wrapper"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/desc_cover_image"
            android:scaleType="centerCrop" />

        <Spinner
            android:id="@+id/spinner_story_lang"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imageview_story_wrapper"
            android:layout_toRightOf="@id/imageview_story_wrapper" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinput_story_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner_story_lang"
            android:layout_toEndOf="@id/imageview_story_wrapper"
            android:layout_toRightOf="@id/imageview_story_wrapper">

            <EditText
                android:id="@+id/edittext_story_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_story_title"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_story_category"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textinput_story_title"
            android:layout_toEndOf="@id/imageview_story_wrapper"
            android:layout_toRightOf="@id/imageview_story_wrapper" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>

    <EditText
        android:id="@+id/edittext_story_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/hint_story_description"
        android:gravity="center"/>

</LinearLayout>